--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^14.3.2",
-    "cypress-qase-reporter": "^2.3.0"
+    "cypress-qase-reporter": "^2.3.0",
+    "cypress-mochawesome-reporter": "^3.5.0",
+    "cypress-multi-reporters": "^1.6.3",
+    "eslint-plugin-cypress": "^2.13.3"
   }
 }
