--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
 "scripts": {
-  "test": "npx cypress run"
+  "test": "QASE_MODE=testops npx cypress run"
 },
   "repository": {
     "type": "git",
