--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+  # Manual trigger via the Actions UI
+  workflow_dispatch:
+
 jobs:
   test:
     runs-on: ubuntu-latest
